@@ -1,5 +1,10 @@
 2009-04-03  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-playlist.c (totem_playlist_init): Fix tooltip
+	settings in the playlist, nobody could have tested that...
+
+2009-04-03  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst-0.10.c
 	(bvw_update_interface_implementations):
 	Remove unused variable
